--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -8,21 +8,16 @@
         <script type="module" src="./index.js"></script>
       </head>
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">Taraskina</a>
-            <ul>
-                <li><a href="./portfolio.html">portfolio</a></li>
-                <li><a href="">about</a></li>
-                <li><a href="">contacts</a></li>
-            </ul>
-        </nav>
-    </header>
+    <include src="./partials/header.html"></include>
     <main>
-        <section class="portfolio"></section>
-        <ul class="portfolio__list">
+        <section class="portfolio">
+            <div class="container">
+                <ul class="portfolio__list">
 
-        </ul>
+                </ul>
+            </div>
+        </section>
     </main>
+    <include src="./partials/footer.html"></include>
 </body>
 </html>
