--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
   <body>
     <include src="./partials/header.html"></include>
     <main></main>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
