--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,10 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <main></main>
+    <main>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/advantages.html"></include>
+    </main>
     <include src="./partials/footer.html"></include>
   </body>
 </html>
