--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     <main>
       <include src="./partials/hero.html"></include>
       <include src="./partials/advantages.html"></include>
+      <include src="./partials/about.html"></include>
+      <include src="./partials/gallery.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
   </body>
