--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>Taraskina</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
@@ -11,9 +11,9 @@
     <include src="./partials/header.html"></include>
     <main>
       <include src="./partials/hero.html"></include>
-      <include src="./partials/advantages.html"></include>
       <include src="./partials/about.html"></include>
       <include src="./partials/gallery.html"></include>
+      <include src="./partials/advantages.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
   </body>
