--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -19,5 +19,6 @@
         </section>
     </main>
     <include src="./partials/footer.html"></include>
+    <script src="./js/portfolio.js" type="module" ></script>
 </body>
 </html>
