finished styling the footer

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -12,9 +12,7 @@
     <main>
         <section class="portfolio">
             <div class="container">
-                <ul class="portfolio__list">
-
-                </ul>
+                <ul class="portfolio__list"></ul>
             </div>
         </section>
     </main>
