--- a/src/about.html
+++ b/src/about.html
@@ -37,5 +37,6 @@
         </section>
     </main>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/go-to-top.html"></include>
 </body>
 </html>
