--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,6 @@
       <include src="./partials/advantages.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/go-to-top.html"></include>
   </body>
 </html>
