--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -17,6 +17,7 @@
         </section>
     </main>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/go-to-top.html"></include>
     <script src="./js/portfolio.js" type="module" ></script>
 </body>
 </html>
