--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -13,6 +13,7 @@
         <section class="portfolio">
             <div class="container">
                 <ul class="portfolio__list"></ul>
+                <div class="js-guard"></div>
             </div>
         </section>
     </main>
